tests/error/errors_on_usage/var_in_modifier4.err
Error: Variable assigned in modifier block (at $FILE:10:8)
   | 
 8 |     with dagger:
 9 |         i = 3
10 |     u = i
   |         ^ `i` cannot be used...

Note:
   | 
 8 |     with dagger:
 9 |         i = 3
   |         ----- ... since it was defined in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
